Support older JDK